--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "guess-mine",
   "version": "1.0.0",
   "description": "Realtime Drawing Game built with SocketIO, Gulp and Node",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev:server": "nodemon --exec babel-node src/server --ignore assets/ --ignore src/static",
+    "dev:server": "nodemon --exec babel-node src/server --ignore assets/ --ignore src/static/",
     "dev:assets": "gulp watchFiles"
   },
   "repository": {
@@ -32,12 +32,13 @@
     "node-sass": "^6.0.0",
     "nodemon": "^2.0.7",
     "pug": "^3.0.2",
-    "socket.io": "^4.1.2"
+    "socket.io": "^4.1.2",
+    "uglifyify": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/node": "^7.14.2",
-    "@babel/preset-env": "^7.14.4",
+    "babel-preset-es2015": "^6.24.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.3.0"
