--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "guess-mine",
+  "name": "Web_Telestrations",
   "version": "1.0.0",
-  "description": "Realtime Drawing Game built with SocketIO, Gulp and Node",
+  "description": "Web_Telestrations",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -10,15 +10,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Soonwook34/nomadcoders-study_guess-mine_test.git"
+    "url": "git+https://github.com/UnSooNook/NP_Project1_Web_Telestrations.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Soonwook34/nomadcoders-study_guess-mine_test/issues"
+    "url": "https://github.com/UnSooNook/NP_Project1_Web_Telestrations/issues"
   },
-  "homepage": "https://github.com/Soonwook34/nomadcoders-study_guess-mine_test#readme",
+  "homepage": "https://github.com/UnSooNook/NP_Project1_Web_Telestrations#readme",
   "dependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/node": "^7.14.2",
+    "@babel/preset-env": "^7.4.3",
     "babelify": "^10.0.0",
     "del": "^6.0.0",
     "eslint": "^7.27.0",
@@ -36,9 +39,6 @@
     "uglifyify": "^5.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/node": "^7.14.2",
-    "babel-preset-es2015": "^6.24.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.3.0"
