--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
   },
   "homepage": "https://github.com/UnSooNook/NP_Project1_Web_Telestrations#readme",
   "dependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/node": "^7.14.2",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-env": "^7.14.4",
     "babelify": "^10.0.0",
     "del": "^6.0.0",
     "eslint": "^7.27.0",
@@ -39,6 +37,9 @@
     "uglifyify": "^5.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/node": "^7.14.2",
+    "babel-preset-es2015": "^6.24.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.3.0"
