--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-bro": "^2.0.0",
     "gulp-csso": "^4.0.1",
     "gulp-sass": "^4.1.0",
+    "html2canvas": "^1.0.0-rc.7",
     "morgan": "^1.10.0",
     "node-sass": "^6.0.0",
     "nodemon": "^2.0.7",
