--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/UnSooNook/NP_Project1_Web_Telestrations#readme",
   "dependencies": {
     "@babel/preset-env": "^7.14.4",
+    "@babel/runtime": "^7.14.6",
     "babelify": "^10.0.0",
     "del": "^6.0.0",
     "eslint": "^7.27.0",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/node": "^7.14.2",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "babel-preset-es2015": "^6.24.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
